--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<script src="js/libs/extend.js"    ></script>
 	<script src="js/classes/vehicle.js"></script>
 	<script src="js/classes/vehicleTransport.js"></script>
+	<script src="js/classes/vehicleCar.js"></script>
+	<script src="js/classes/vehicleBus.js"></script>
+	<script src="js/classes/vehicleTrack.js"></script>
 	<script src="js/config.js"></script>
 	<script src="js/app.js"></script>
 	<!-- TODO: join all scripts to one file -->
@@ -27,7 +30,9 @@
 		</form>
 	</div>
 	<div class="indicator">
-		<div class="bar-progress"></div>
+		<div class="bar-progress">
+			<div class="bar-progress__inner"></div>
+		</div>
 		<table>
 			<tr class="fuel">
 				<td></td>
