--- a/index.html
+++ b/index.html
@@ -17,18 +17,24 @@
 	<!-- TODO: join all scripts to one file -->
 </head>
 <body>
-	<div class="panel-control">
-		<form>
+	<form class="panel-control">
+		<fieldset>
+			<legend>Vehicle type</legend>
 			<input class="panel-control__input-type-vehicle" name="type-vehicle" id="type-vehicle-car" value="car" type="radio" checked="checked" />
 			<label for="type-vehicle-car">car</label>
 			<input class="panel-control__input-type-vehicle" name="type-vehicle" id="type-vehicle-bus" value="bus" type="radio" />
 			<label for="type-vehicle-bus">bus</label>
 			<input class="panel-control__input-type-vehicle" name="type-vehicle" id="type-vehicle-track" value="track" type="radio" />
 			<label for="type-vehicle-track">track</label>
-			<input class="panel-control__button panel-control__button_start" type="button" value="start" />
-			<input class="panel-control__button panel-control__button_stop"  type="button" value="stop" />
-		</form>
-	</div>
+		</fieldset>
+		<fieldset>
+			<legend>Distance</legend>
+			<input type="text" class="panel-control__input-distance" value="10000" />
+			<span class="panel-control__error panel-control__error-distance hidden">Incorrect distance. Integer expected</span>
+		</fieldset>
+		<input class="panel-control__button panel-control__button_start" type="button" value="start" />
+		<input class="panel-control__button panel-control__button_stop hidden"  type="button" value="stop" />
+	</form>
 	<div class="indicator">
 		<div class="bar-progress">
 			<div class="bar-progress__line"></div>
