comments and bugfix

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<script src="js/classes/vehicleTransport.js"> </script>
 	<script src="js/classes/vehicleCar.js"  > </script>
 	<script src="js/classes/vehicleBus.js"  > </script>
-	<script src="js/classes/vehicleTrack.js"> </script>
+	<script src="js/classes/vehicleTruck.js"> </script>
 	<script src="js/views/viewIndicator.js" > </script>
 	<script src="js/views/viewPanelControl.js" > </script>
 	<script src="js/config.js"> </script>
@@ -24,8 +24,8 @@
 			<label for="type-vehicle-car">car</label>
 			<input class="panel-control__input-type-vehicle" name="type-vehicle" id="type-vehicle-bus" value="bus" type="radio" />
 			<label for="type-vehicle-bus">bus</label>
-			<input class="panel-control__input-type-vehicle" name="type-vehicle" id="type-vehicle-track" value="track" type="radio" />
-			<label for="type-vehicle-track">track</label>
+			<input class="panel-control__input-type-vehicle" name="type-vehicle" id="type-vehicle-truck" value="truck" type="radio" />
+			<label for="type-vehicle-truck">truck</label>
 		</fieldset>
 		<fieldset>
 			<legend>Distance</legend>
